# lay_text

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs  messg.rs  widgets.rs
src/main/: lay_editor.rs  lay_menubar.rs  lay_term.rs  lay_window.rs  window.rs
src/widgets/: lay.rs  lay_editor.rs  lay_menubar.rs  lay_tabs.rs  lay_widget.rs  lay_window.rs
