[package]
name = "lay_text"
version = "0.1.0"
authors = ["Prakash <choudharyprakash066@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fltk = { version = "^1.1", git = "https://github.com/fltk-rs/fltk-rs" }
